--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -1963,8 +1963,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T21:57:01.715738Z",
-     "start_time": "2025-09-28T21:57:00.605046Z"
+     "end_time": "2025-09-28T23:19:57.973182Z",
+     "start_time": "2025-09-28T23:19:55.793274Z"
     }
    },
    "cell_type": "code",
@@ -1987,23 +1987,46 @@
     "player1_x\n",
     "\n",
     "# player1_y\n",
-    "\n",
-    "# point = (player1_x[i],player1_y[i])"
+    "player1_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_1_y'])\n",
+    "        time_index=time_index+1\n",
+    "point = (player1_x[1],player1_y[1])"
    ],
    "id": "891e1ed4adfca5c6",
+   "outputs": [],
+   "execution_count": 87
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-28T23:50:06.192397Z",
+     "start_time": "2025-09-28T23:50:06.132547Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "rect, results = cap.classify_points(point,-10.6,-0.68)",
+   "id": "87598a9f41d96ca6",
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[15.674219999999995, 17.66914, 15.26188, 14.416, 14.6386, 0, 0]"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable float object",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[116]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m rect, results = \u001B[43mcap\u001B[49m\u001B[43m.\u001B[49m\u001B[43mclassify_points\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpoint\u001B[49m\u001B[43m,\u001B[49m\u001B[43m-\u001B[49m\u001B[32;43m10.6\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m-\u001B[49m\u001B[32;43m0.68\u001B[39;49m\u001B[43m)\u001B[49m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/Shangkai-fu_oludamilola-ajala/capsule_pass_figure.py:3\u001B[39m, in \u001B[36mclassify_points\u001B[39m\u001B[34m(points, p1, p2)\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m#import the library\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mmath\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n",
+      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/Shangkai-fu_oludamilola-ajala/capsule_pass_figure.py:3\u001B[39m, in \u001B[36mrectangle_from_two_circles\u001B[39m\u001B[34m(p1, p2, RADIUS)\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m#import the library\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mmath\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n",
+      "\u001B[31mTypeError\u001B[39m: cannot unpack non-iterable float object"
+     ]
     }
    ],
-   "execution_count": 81
+   "execution_count": 116
   }
  ],
  "metadata": {
