--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -1882,8 +1882,8 @@
    "id": "d06f94ef",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T17:29:35.118968Z",
-     "start_time": "2025-09-28T17:29:35.041581Z"
+     "end_time": "2025-09-29T21:48:18.702943Z",
+     "start_time": "2025-09-29T21:48:18.620972Z"
     }
    },
    "source": [
@@ -1902,7 +1902,7 @@
        " (-0.3200967392134998, 4.9897432877398495)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1920,7 +1920,7 @@
      }
     }
    ],
-   "execution_count": 37
+   "execution_count": 130
   },
   {
    "metadata": {
@@ -1963,13 +1963,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T23:19:57.973182Z",
-     "start_time": "2025-09-28T23:19:55.793274Z"
+     "end_time": "2025-09-29T22:17:36.497890Z",
+     "start_time": "2025-09-29T22:17:34.294676Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "\n",
     "start_time = [0]*8\n",
     "for index, row in passes.iterrows():\n",
     "  if index > 8: continue\n",
@@ -1984,8 +1983,6 @@
     "        player1_x[time_index]=float(row['Home_1_x'])\n",
     "        time_index=time_index+1\n",
     "\n",
-    "player1_x\n",
-    "\n",
     "# player1_y\n",
     "player1_y = [0]*7\n",
     "time_index=0\n",
@@ -1993,40 +1990,29 @@
     "    if time_index > 7 : continue\n",
     "    tmp = float(row['Time [s]'])\n",
     "    if tmp==float(start_time[time_index+1]):\n",
-    "        player1_x[time_index]=float(row['Home_1_y'])\n",
+    "        player1_y[time_index]=float(row['Home_1_y'])\n",
     "        time_index=time_index+1\n",
-    "point = (player1_x[1],player1_y[1])"
+    "point = (player1_x[1],player1_y[1])\n",
+    "points = [0]*2\n",
+    "points[0]=point\n",
+    "points[1]=point"
    ],
    "id": "891e1ed4adfca5c6",
    "outputs": [],
-   "execution_count": 87
+   "execution_count": 142
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T23:50:06.192397Z",
-     "start_time": "2025-09-28T23:50:06.132547Z"
+     "end_time": "2025-09-29T22:17:29.249778Z",
+     "start_time": "2025-09-29T22:17:29.226748Z"
     }
    },
    "cell_type": "code",
-   "source": "rect, results = cap.classify_points(point,-10.6,-0.68)",
+   "source": "rect, results = cap.classify_points(points,(0,0),(-10.6,-0.68))",
    "id": "87598a9f41d96ca6",
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable float object",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mTypeError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[116]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m rect, results = \u001B[43mcap\u001B[49m\u001B[43m.\u001B[49m\u001B[43mclassify_points\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpoint\u001B[49m\u001B[43m,\u001B[49m\u001B[43m-\u001B[49m\u001B[32;43m10.6\u001B[39;49m\u001B[43m,\u001B[49m\u001B[43m-\u001B[49m\u001B[32;43m0.68\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/Shangkai-fu_oludamilola-ajala/capsule_pass_figure.py:3\u001B[39m, in \u001B[36mclassify_points\u001B[39m\u001B[34m(points, p1, p2)\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m#import the library\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mmath\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n",
-      "\u001B[36mFile \u001B[39m\u001B[32m~/PycharmProjects/Shangkai-fu_oludamilola-ajala/capsule_pass_figure.py:3\u001B[39m, in \u001B[36mrectangle_from_two_circles\u001B[39m\u001B[34m(p1, p2, RADIUS)\u001B[39m\n\u001B[32m      1\u001B[39m \u001B[38;5;66;03m#import the library\u001B[39;00m\n\u001B[32m      2\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mmath\u001B[39;00m\n\u001B[32m----> \u001B[39m\u001B[32m3\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpandas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mpd\u001B[39;00m\n\u001B[32m      4\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mcsv\u001B[39;00m\n\u001B[32m      5\u001B[39m \u001B[38;5;28;01mimport\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnumpy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mas\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[34;01mnp\u001B[39;00m\n",
-      "\u001B[31mTypeError\u001B[39m: cannot unpack non-iterable float object"
-     ]
-    }
-   ],
-   "execution_count": 116
+   "outputs": [],
+   "execution_count": 141
   }
  ],
  "metadata": {
