--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -1925,8 +1925,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-28T17:29:45.183048Z",
-     "start_time": "2025-09-28T17:29:45.096287Z"
+     "end_time": "2025-09-30T02:17:07.583848Z",
+     "start_time": "2025-09-30T02:17:07.497817Z"
     }
    },
    "cell_type": "code",
@@ -1934,13 +1934,19 @@
     "KO_Frame = events.loc[0]['Start Frame']\n",
     "fig,ax = mviz.plot_frame( tracking_home.loc[KO_Frame], tracking_away.loc[KO_Frame] )\n",
     "\n",
+    "start_points=[]*8\n",
+    "end_points=[]*8\n",
     "for index, row in passes.iterrows():\n",
     "  if index > 8: continue\n",
     "  cap.capsule(\n",
     "        ax,\n",
     "        row['Start X'], row['Start Y'],\n",
     "        row['End X'], row['End Y']\n",
-    "    )"
+    "    )\n",
+    "  start_point = [row['Start X'], row['Start Y']]\n",
+    "  end_point = [row['End X'], row['End Y']]\n",
+    "  start_points.append(start_point)\n",
+    "  end_points.append(end_point)"
    ],
    "id": "d6a0d249200ced3c",
    "outputs": [
@@ -1958,13 +1964,13 @@
      }
     }
    ],
-   "execution_count": 38
+   "execution_count": 147
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T22:17:36.497890Z",
-     "start_time": "2025-09-29T22:17:34.294676Z"
+     "end_time": "2025-09-30T02:39:07.737536Z",
+     "start_time": "2025-09-30T02:38:43.633659Z"
     }
    },
    "cell_type": "code",
@@ -1992,27 +1998,207 @@
     "    if tmp==float(start_time[time_index+1]):\n",
     "        player1_y[time_index]=float(row['Home_1_y'])\n",
     "        time_index=time_index+1\n",
-    "point = (player1_x[1],player1_y[1])\n",
+    "\n",
+    "player2_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_2_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player2_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_2_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player3_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_3_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player3_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_3_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player4_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_4_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player4_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_4_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player5_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_5_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player5_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_5_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player6_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_6_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player6_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_6_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player7_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_7_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player7_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_7_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player8_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_8_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player8_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_8_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player9_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_9_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player9_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_9_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player10_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_10_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player10_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_10_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player11_x = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_x[time_index]=float(row['Home_11_x'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
+    "player11_y = [0]*7\n",
+    "time_index=0\n",
+    "for index,row in tracking_home.iterrows():\n",
+    "    if time_index > 7 : continue\n",
+    "    tmp = float(row['Time [s]'])\n",
+    "    if tmp==float(start_time[time_index+1]):\n",
+    "        player1_y[time_index]=float(row['Home_11_y'])\n",
+    "        time_index=time_index+1\n",
+    "\n",
     "points = [0]*2\n",
     "points[0]=point\n",
     "points[1]=point"
    ],
    "id": "891e1ed4adfca5c6",
    "outputs": [],
-   "execution_count": 142
+   "execution_count": 149
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-29T22:17:29.249778Z",
-     "start_time": "2025-09-29T22:17:29.226748Z"
+     "end_time": "2025-09-30T02:39:58.875551Z",
+     "start_time": "2025-09-30T02:39:58.858941Z"
     }
    },
    "cell_type": "code",
    "source": "rect, results = cap.classify_points(points,(0,0),(-10.6,-0.68))",
    "id": "87598a9f41d96ca6",
    "outputs": [],
-   "execution_count": 141
+   "execution_count": 152
   }
  ],
  "metadata": {
