--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -2186,8 +2186,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T04:06:21.608341Z",
-     "start_time": "2025-09-30T04:06:21.585913Z"
+     "end_time": "2025-09-30T04:09:25.420107Z",
+     "start_time": "2025-09-30T04:09:25.393639Z"
     }
    },
    "cell_type": "code",
@@ -2444,31 +2444,30 @@
        "   'in_rect': False}]]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 59
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T04:06:24.320111Z",
-     "start_time": "2025-09-30T04:06:24.299063Z"
+     "end_time": "2025-09-30T04:09:28.199917Z",
+     "start_time": "2025-09-30T04:09:28.178957Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "impact_factors = []   # 0/1 影响因子\n",
-    "impact_counts = []    # 每次传球有多少个球员落在 circle 中\n",
-    "rect_factors = []     # 矩形影响因子\n",
-    "rect_counts = []      # 矩形人数\n",
-    "# === 影响因子 (只要有人在 circle 就记 1) ===\n",
+    "impact_factors = []\n",
+    "impact_counts = []\n",
+    "rect_factors = []\n",
+    "rect_counts = []\n",
+    "\n",
     "factor = 1 if any(r['in_circle1'] or r['in_circle2'] for r in results) else 0\n",
     "impact_factors.append(factor)\n",
     "\n",
-    "# === 影响人数 (有多少人落在 circle) ===\n",
     "count = sum(1 for r in results if r['in_circle1'] or r['in_circle2'])\n",
     "impact_counts.append(count)\n",
     "\n",
@@ -2712,18 +2711,18 @@
        " [0])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 60
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-30T04:06:52.630822Z",
-     "start_time": "2025-09-30T04:06:52.612279Z"
+     "end_time": "2025-09-30T04:09:29.973058Z",
+     "start_time": "2025-09-30T04:09:29.939043Z"
     }
    },
    "cell_type": "code",
@@ -2786,12 +2785,12 @@
        "</div>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 58
+   "execution_count": 61
   }
  ],
  "metadata": {
