The Final version FINALFINAL

--- a/example_notebook.ipynb
+++ b/example_notebook.ipynb
@@ -2792,23 +2792,23 @@
     "    start_pt = start_points[pass_index]\n",
     "    end_pt = end_points[pass_index]\n",
     "\n",
-    "    # 计算影响因子和影响人数\n",
+    "    # Calculate impact factor and number of influencers\n",
     "    factor = 1 if any(r['in_circle1'] or r['in_circle2'] for r in results) else 0\n",
     "    count = sum(1 for r in results if r['in_circle1'] or r['in_circle2'])\n",
     "\n",
-    "    # 展开每个球员\n",
+    "    # Expand each player\n",
     "    for player_index, r in enumerate(results, start=1):\n",
     "        all_rows.append({\n",
-    "            \"pass_index\": pass_index,        # 第几次传球\n",
-    "            \"start_point\": start_pt,         # 传球起点\n",
-    "            \"end_point\": end_pt,             # 传球终点\n",
-    "            \"player\": player_index,          # 第几个球员\n",
-    "            \"point\": r[\"point\"],             # 球员坐标\n",
+    "            \"pass_index\": pass_index,\n",
+    "            \"start_point\": start_pt,\n",
+    "            \"end_point\": end_pt,\n",
+    "            \"player\": player_index,\n",
+    "            \"point\": r[\"point\"],\n",
     "            \"in_circle1\": r[\"in_circle1\"],\n",
     "            \"in_circle2\": r[\"in_circle2\"],\n",
     "            \"in_rect\": r[\"in_rect\"],\n",
-    "            \"impact_factor\": factor,         # 整次传球影响因子\n",
-    "            \"impact_count\": count            # 整次传球影响人数\n",
+    "            \"impact_factor\": factor,\n",
+    "            \"impact_count\": count\n",
     "        })\n",
     "\n",
     "df_expanded = pd.DataFrame(all_rows)\n",
